# SereverWithPython

./: README.md  log_1337131928.txt  main.py  pyproject.toml  support.py  tele_bot.py  tst.py
archive/: a.txt  crypt_db.py  database_inquiry.py  mdb_test.py
static/: styles.css  test.css
templates/: general.html  index.html  layout.html  success.html  test.html  working.html
