[tool.poetry]
name = "repl_nix_SereverWithPython"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
pymongo = "^4.4.0"
pytz = "^2023.3"
requests = "^2.31.0"
tabulate = "^0.9.0"
telebot = "^0.0.5"
cryptography = "^41.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
